build.gradle modifed

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,15 @@
 plugins {
     id 'java'
+    id 'org.sonarqube' version "4.3.1.3277"
+    id 'jacoco'
+}
+
+sonar {
+    properties {
+        property "sonar.projectKey", "bhos-qa_l4-branch-coverage-Dr4ks"
+        property "sonar.organization", "bhos-qa"
+        property "sonar.host.url", "https://sonarcloud.io"
+    }
 }
 
 group = 'org.example'
