--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,20 @@ dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
+jacoco {
+    toolVersion= "0.8.9"
+}
+
+jacocoTestReport{
+    dependsOn test
+
+    reports {
+        xml.required=true
+        html.required=true
+    }
+}
 
 test {
     useJUnitPlatform()
+    finalizedBy jacocoTestReport
 }
